--- a/.github/workflows/write_file.yml
+++ b/.github/workflows/write_file.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Commit changes
         if: contains(github.event.head_commit.message, '[skip ci]') == false
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
+          git config --global user.name 'Adwait Gawade'
+          git config --global user.email 'adwaitg02@gmail.com'
           git add example.txt
           git commit -m "Add line of text to example.txt [skip ci]"
           git push
