--- a/.github/workflows/write_file.yml
+++ b/.github/workflows/write_file.yml
@@ -26,19 +26,19 @@ jobs:
       - name: Run pylint
         if: contains(github.event.head_commit.message, '[skip ci]') == false
         run: |
-          pylint **/*.py > pylint-report.txt || true
+          pylint **/*.py > report-pylint.txt || true
 
       - name: Run bandit
         if: contains(github.event.head_commit.message, '[skip ci]') == false
         run: |
-          bandit -r . -f txt -o bandit-report.txt || true
+          bandit -r . -f txt -o report-bandit.txt || true
 
       - name: Commit changes
         if: contains(github.event.head_commit.message, '[skip ci]') == false
         run: |
           git config --global user.name 'Adwait Gawade'
           git config --global user.email 'adwaitg02@gmail.com'
-          git add pylint-report.txt bandit-report.txt
+          git add report-pylint.txt report-bandit.txt
           git commit -m "Add line of text to example.txt [skip ci]"
           git push
         env:
